# TikzPlot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
additional_tools/: ccycle_parser.py  cmap_translator.py  tester.py
src/TikzPlot.egg-info (Case Conflict)/: PKG-INFO  SOURCES.txt
src/tikzplot/: __init__.py  __init__.pyi  axes.py  axes.pyi  axes3d.py  axes3d.pyi  colorbar.py  colorbar.pyi  colors.py  colors.pyi  config.py  config.pyi  elements.py  elements.pyi  figure.py  figure.pyi  latex_special.py  plots.py  plots.pyi  py.typed  state.py  state.pyi  styles.py  styles.pyi  texts.py
src/tikzplot.egg-info/: PKG-INFO  SOURCES.txt
src/tikzplot42.egg-info (Case Conflict 2)/: PKG-INFO
src/tikzplot42.egg-info (Case Conflict)/: SOURCES.txt
tests/: demo.py  demo.tex  figure.tex  figure1.tex  main.fdb_latexmk  main.fls  main.tex  plot.tex  test1.py  test10.py  test11.py  test2.py  test3.py  test30.tikz  test4.py  test5.py  test6.py  test6_showplot1.tex  test7.py  test8.py  test9.py  test_styles.py
